--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
+.center {
+  display: flex;
+  align-items: center;
+}
+
 .card {
   max-width: 800px;
   margin-left: auto;
